<resources>
    <string name="app_name">Birthday Party Manager</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="solicitar">Esqueceu a Senha?</string>
    <string name="cadastroinicial">Cadastre-se no Birthday Party Manager</string>
    <string name="title_activity_nova_senha">NovaSenha</string>
    <string name="novaSenha">Para recuperar sua senha, informe o seu e-mail
        abaixo para que sejam enviadas as instruções de recuperação:</string>
    <string name="title_activity_cadastro_promoter">CadastroPromoterActivity</string>
    <string name="title_activity_inicial">InicialActivity</string>
    <string name="title_activity_cadastro_festa">CadastroFestaActivity</string>
    <string name="title_activity_festa">FestaActivity</string>
    <string name="title_activity_cadastro_item">CadastroItemActivity</string>
    <string name="title_activity_cadastro_convidado">CadastroConvidadoActivity</string>
    <string name="title_activity_convidado">ConvidadoActivity</string>
    <string name="title_activity_item">ItemActivity</string>

</resources>
