<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.iff.pooa20171.birthdaypartymanager.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/ivBolas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:visibility="visible"
            app:srcCompat="@drawable/bolas" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btEntrar"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/holo_green_dark"
            android:text="@string/entrar"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tvSolicitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/solicitar"
            android:textColor="?attr/colorPrimary" />

        <Button
            android:id="@+id/btCadastroInicial"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/cadastroinicial"
            android:textColor="#ffffff" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
